assets/app.css
@import './tailwind.css';
@import './fonts.css';
@import './defaultStyles.css';
@import './absicons.css';
@import './transitions.css';

* {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  user-select: none;
}

input,
textarea {
  -webkit-touch-callout: auto;
  -webkit-user-select: auto;
  user-select: auto;
}

.layout-wrapper {
  height: 100vh;
  min-height: 100vh;
  max-height: 100vh;
  margin-top: 0;
  height: calc(100vh - env(safe-area-inset-top, 0px));
  min-height: calc(100vh - env(safe-area-inset-top, 0px));
  max-height: calc(100vh - env(safe-area-inset-top, 0px));
  margin-top: env(safe-area-inset-top, 0px);
}

#content {
  height: calc(100% - 64px);
  min-height: calc(100% - 64px);
  max-height: calc(100% - 64px);
}

#content.playerOpen {
  height: calc(100% - 184px);
  min-height: calc(100% - 184px);
  max-height: calc(100% - 184px);
}

html[data-platform='webos'] #content {
  height: calc(100% - 80px);
  min-height: calc(100% - 80px);
  max-height: calc(100% - 80px);
}

html[data-platform='webos'] #content.playerOpen {
  height: calc(100% - 200px);
  min-height: calc(100% - 200px);
  max-height: calc(100% - 200px);
}

#bookshelf {
  height: calc(100% - 48px);
  min-height: calc(100% - 48px);
}

.box-shadow-sm {
  box-shadow: 0px 3px 6px #11111170;
}

.box-shadow-md {
  box-shadow: 2px 8px 6px #111111aa;
}

.box-shadow-lg-up {
  box-shadow: 0px -12px 8px #111111ee;
}

.box-shadow-xl {
  box-shadow: 2px 14px 8px #111111aa;
}

.box-shadow-book {
  box-shadow: 4px 1px 8px #11111166, -4px 1px 8px #11111166, 1px -4px 8px #11111166;
}

.box-shadow-progressbar {
  box-shadow: 0px -1px 4px rgb(62, 50, 2, 0.5);
}

.shadow-height {
  height: calc(100% - 4px);
}

.bookshelfRow {
  background-image: url(~static/wood_panels.jpg);
}

.bookshelfDivider {
  background: rgb(149, 119, 90);
  background: linear-gradient(180deg, rgba(149, 119, 90, 1) 0%, rgba(103, 70, 37, 1) 17%, rgba(103, 70, 37, 1) 88%, rgba(71, 48, 25, 1) 100%);
  box-shadow: 2px 10px 8px #1111117e;
}

.altBookshelfDivider {
  background: rgb(38 38 38);
  /*background: linear-gradient(180deg, rgba(191, 193, 195, 1) 0%, rgb(156, 158, 159) 17%, rgb(114, 115, 117) 88%, rgb(120, 120, 122) 100%);*/
  box-shadow: 2px 10px 8px #1111117e;
}

/*
Bookshelf Label
*/
.categoryPlacard {
  letter-spacing: 1px;
}

.shinyBlack {
  background-color: #2d3436;
  background-image: linear-gradient(315deg, #19191a 0%, rgb(15, 15, 15) 74%);
  border-color: rgba(255, 244, 182, 0.6);
  border-style: solid;
  color: #fce3a6;
}

.altBookshelfLabel {
  background-color: #2d3436;
  background-image: linear-gradient(315deg, #19191a 0%, rgb(15, 15, 15) 74%);
  border-color: rgb(255, 255, 255);
  border-style: solid;
  color: #ffffff;
}

.cover-bg {
  width: calc(100% + 40px);
  height: calc(100% + 40px);
  top: -20px;
  left: -20px;
  background-size: 100% 100%;
  background-position: center;
  opacity: 1;
  filter: blur(20px);
}

.episode-subtitle {
  word-break: break-word;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  line-height: 16px;
  /* fallback */
  max-height: 32px;
  /* fallback */
  -webkit-line-clamp: 2;
  /* number of lines to show */
  -webkit-box-orient: vertical;
}

.line-clamp-2 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}

.line-clamp-4 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.tracksTable {
  border-collapse: collapse;
  width: 100%;
  border: 1px solid rgba(var(--color-secondary), 1);
}

.tracksTable tr:nth-child(even) {
  background-color: rgba(var(--color-secondary), 1);
}

.tracksTable tr {
  background-color: rgba(var(--color-bg), 1);
}

.tracksTable td {
  padding: 8px 8px;
}

.tracksTable th {
  padding: 4px 8px;
  font-size: 0.75rem;
}

